# haskell-99

./: README.md  ninety-nine.cabal  stack.yaml
exe/: Main.hs
src/: ConstructTree.hs  DecodeEncoding.hs  DropEvery.hs  Duplicate.hs  Flatten.hs  InsertAt.hs  IsPalindrome.hs  IsPrime.hs  KthElem.hs  Last.hs  LastButOne.hs  NumElems.hs  Pack.hs  RandRange.hs  RandSelect.hs  Range.hs  Remove.hs  RemoveDupes.hs  Replicate.hs  Reverse.hs  Rotate.hs  RunLengthEncoding.hs  Slice.hs  Split.hs  SublistSort.hs
