name:                ninety-nine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/seanchen1991/haskell-99#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Chen
maintainer:          seanchen11235@gmail.com 
copyright:           2020 Sean Chen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ninety-nine
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, ninety-nine

library
  hs-source-dirs:      src
  exposed-modules:     Last, LastButOne, KthElem, NumElems, Reverse, IsPalindrome, Flatten, RemoveDupes, Pack
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
